--- a/gevorkyan_oopp/gevorkyan_oopp/gevorkyan_oopp.vcxproj
+++ b/gevorkyan_oopp/gevorkyan_oopp/gevorkyan_oopp.vcxproj
@@ -124,6 +124,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="gevorkyan_oopp.cpp" />
+    <ClCompile Include="group.cpp" />
+    <ClCompile Include="student.cpp" />
+    <ClCompile Include="utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="group.h" />
+    <ClInclude Include="student.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
